--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,10 @@ input:focus, textarea:focus{
     font-size: 16px;
 }
 
+.bottom-margin-l{
+    margin-bottom: 25vh;
+}
+
 /* #endregion */
 
 /* #region NavigationBar */
