--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     --secondary-colour: #113537;
     --text-colour:#113537;
     --white:#ffff;
+    --page-bg-colour: #E6E6E6;
     --nav-height:45px;
     --h1: #F0544F;
     --input-field-background: #F8F8F8;
@@ -46,6 +47,19 @@ h1{
     padding: 7px 30px;
     text-align: center;
     border-radius: 5px;
+}
+
+.bg-white{
+    background-color: var(--white);
+    color: var(--secondary-colour);
+}
+
+.font-italics{
+    font-style: italic;
+}
+
+.text-left-align{
+    text-align: left;
 }
 
 .section{
@@ -119,7 +133,19 @@ input:focus, textarea:focus{
 }
 
 .top-m-s{
-    margin-top: calc(var(--nav-height) + 8vh);
+    margin-top: calc(var(--nav-height) + 2vh);
+}
+
+.bg-colour-main{
+    background-color: var(--page-bg-colour);
+}
+
+.pg-fixed-bg{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    z-index: -3;
 }
 
 /* #endregion */
@@ -166,7 +192,7 @@ nav .nav-links li{
 /* #region Landing */
 
 .landing{
-    background-color: #E6E6E6;
+    background-color: var(--page-bg-colour);
     margin-top: calc(-1 * var(--nav-height));
 }
 
@@ -204,7 +230,7 @@ nav .nav-links li{
 
 /* #endregion */
 
-/*#region Featured*/
+/* #region Featured*/
 
 .featured {
     margin-top: 20vh;
@@ -274,7 +300,7 @@ nav .nav-links li{
 
 /*#endregion*/
 
-/*#region Contact-section */
+/* #region Contact-section */
 
 .contact-page .title {
     max-width: 37vw;
@@ -376,6 +402,72 @@ footer .footer-category-title{
 footer .sitemap a{
     display: flex;
     flex-direction: column;
+}
+
+/* #endregion */
+
+/* #region About */
+
+.about-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 50px;
+    max-width: 900px;
+    margin: auto;
+    margin-top: 20vh;
+    position: relative;
+}
+
+.about-links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    max-width: 150px;
+}
+
+.intro-meta{
+    font-size: 15px;
+    line-height: 18px;
+    margin-bottom: 20px;
+}
+
+.about-links a{
+    text-align: left;
+    position: relative;
+    border: .05px solid rgb(233, 233, 233);
+    padding: 2px 30px;
+}
+
+.about-links a span{
+    position: absolute;
+    right: 15px;
+}
+
+.skills-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 10vh;
+    grid-row-gap: 4vh;
+    width: fit-content;
+    margin: auto;
+}
+
+.skill-card{
+    position: relative;
+    max-width: 250px;
+}
+
+.skill-card p{
+    position: absolute;
+    top: 10px;
+    width: fit-content;
+    left: 50%;
+    transform: translate(-50%, 10px);
+}
+
+.skill-card img{
+    border-radius: 25px;
+    box-shadow: 1px 3.5px 6px 1px rgb(0 0 0 / 17%);
 }
 
 /* #endregion */
