--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ h1{
     display: block;
     width: fit-content;
     position: relative;
+    margin: auto;
 }
 
 .bg-white{
@@ -304,6 +305,7 @@ nav .nav-links li{
     width: fit-content;
     font-size: 13px;
     padding: 5px 25px;
+    margin: unset;
 }
 
 /* TODO: Write script to count, if odd, apply this. */
@@ -449,12 +451,13 @@ footer .sitemap a{
     text-align: left;
     position: relative;
     border: .05px solid rgb(233, 233, 233);
-    padding: 2px 30px;
+    padding: 2px 35px 2px 10px;
+    margin: unset;
 }
 
 .about-links a span{
     position: absolute;
-    right: 15px;
+    right: 10px;
 }
 
 .skills-container{
