--- a/components/nav.html
+++ b/components/nav.html
@@ -32,37 +32,38 @@
             </ul>
 
             <div class="hamburger">
-                <div class="hamburger-icon">
+                <div class="hamburger-icon" onclick="ToggleHamburger('.hamburger-content')">
                     <div class="line"></div>
                     <div class="line"></div>
                     <div class="line"></div>
                 </div>
+
+                <div class="hamburger-content">
+                    <ul class="hamburger-links">
+                        <li>
+                            <a href="/">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/work/">
+                                Work
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/about/">
+                                About
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/contact/">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="hamburger-content">
-                <ul class="hamburger-links">
-                    <li>
-                        <a href="/">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/work/">
-                            Work
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/about/">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/contact/">
-                            Contact
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 </header>
