--- a/css/main.css
+++ b/css/main.css
@@ -683,6 +683,48 @@ footer .sitemap a{
     .nav-links{
         display: none !important;
     }
+
+    .card{
+        grid-template-columns: 1fr;
+    }
+
+    .card-title{
+        /* text-align: center; */
+    }
+
+    .card-cta{
+        margin: auto;
+        margin-right: 0;
+    }
+
+    .card-breadcrumbs{
+        margin-bottom: 20px;
+    }
+
+    .about-grid{
+        grid-template-columns: 1fr;
+        grid-row-gap: 30px;
+    }
+
+    .about-links{
+        margin: auto;
+    }
+
+    .skills-container{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .interests-list{
+        grid-template-columns: 1fr;
+    }
+
+    .interests-list img{
+        grid-row-start: 1;
+    }
+
+    .interests-list ul{
+        margin-top: 10px;
+    }
 }
 
 /* #endregion */
