--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,10 @@ input:focus, textarea:focus{
     margin-top: calc(var(--nav-height) + 2vh);
 }
 
+.top-p-m{
+    padding-top: 10vh;
+}
+
 .bg-colour-main{
     background-color: var(--page-bg-colour);
 }
@@ -211,6 +215,7 @@ nav .nav-links li{
 }
 
 .hamburger{
+    display: none;
      float: right;
      height: var(--nav-height);
 }
@@ -585,6 +590,7 @@ footer .sitemap a{
     top: 0;
     filter: brightness(55%);
     opacity: 0.3;
+    min-height: calc(100vh + var(--nav-height));
 }
 
 .project-meta .meta-container{
@@ -682,6 +688,10 @@ footer .sitemap a{
 @media screen and (max-width:400px){
     .nav-links{
         display: none !important;
+    }
+
+    .hamburger{
+        display: block;
     }
 
     .card{
