--- a/components/nav.html
+++ b/components/nav.html
@@ -33,9 +33,9 @@
 
             <div class="hamburger">
                 <div class="hamburger-icon" onclick="ToggleHamburger('.hamburger-content')">
+                    <div class="line top-line"></div>
                     <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
+                    <div class="line bottom-line"></div>
                 </div>
 
                 <div class="hamburger-content">
