--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -21,8 +21,10 @@
 <body>
     {% include 'header.njk' %}
     
+    <main>
     {{ content | safe }}
-
+    </main>
+    
     {% include 'footer.njk' %}
 </body>
 </html>
