--- a/src/work/index.njk
+++ b/src/work/index.njk
@@ -12,11 +12,12 @@ layout: 'base.njk'
     <div class="projects">
 
         {% for project in collections.project %}
+
         <div class="card">
             <img src="{{ project.data.image }}" alt="{{ project.data.imageAlt }}">
             <div class="content">
                 <div class="card-title"><h4>{{ project.data.title }}</h4></div>
-                <div class="card-date">{{ project.data.date }}</div>
+                <div class="card-date">{{ project.data.date | projectDate}}</div>
                 <div class="card-breadcrumbs"><p>{{ project.data.description }}</p></div>
                 <a href="#" class="card-cta btn-primary">Learn More</a>
             </div>
