--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -1,12 +1,11 @@
 ---
-title: John Doe - Project Name
 layout: 'base.njk'
 ---
 
-<img class="work-bg-img" src="https://via.placeholder.com/800x900" alt="Placeholder_img">
+<img class="work-bg-img" src="{{ image }}" alt="{{ imageAlt}}">
 <div class="section spacing full-page top-p-m">
     <div class="title">
-        <h1>Content Creation for Steel Company</h1>
+        <h1>{{ title }}</h1>
     </div>
 
     <div class="project-summary">
@@ -16,7 +15,7 @@ layout: 'base.njk'
                     <rect fill="#ddd" width="300" height="150"/>
                     <text fill="rgba(0,0,0,0.5)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">300×150</text>
                 </svg>
-                <p>July 2021 - August 2021</p>
+                <p>{{date | projectDate}}</p>
             </div>
             <div class="meta-container">
                 <svg xmlns="http://www.w3.org/2000/svg" width="300" viewBox="0 0 300 150">
@@ -26,7 +25,7 @@ layout: 'base.njk'
                 <a href="#" class="font-italics">Link to Project &#8594;</a>
             </div>
         </div>
-        <p>enim nunc faucibus a pellentesque. Proin libero nunc consequat interdum varius sit. Enim sit amet venenatis urna cursus eget nunc scelerisque. Malesuada pellentesque elit eget gravida cum sociis.</p>
+        <p>{{ description }}</p>
 
         <div class="cta centre-parent">
             <a href="#" class="btn-primary">Tell me more!<span>&#8595;</span></a>
@@ -36,6 +35,7 @@ layout: 'base.njk'
 
 <div class="section spacing">
     <div class="work-content">
+        {{ content | safe }}
         <!-- Will do this later as not too sure what you can do with rich text -->
     </div>
 </div>
