Customization of pages finished, moving onto featured articles

--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -25,7 +25,7 @@ layout: 'base.njk'
                 <a href="#" class="font-italics">Link to Project &#8594;</a>
             </div>
         </div>
-        <p>{{ description }}</p>
+        <p>{{ summary }}</p>
 
         <div class="cta centre-parent">
             <a href="#" class="btn-primary">Tell me more!<span>&#8595;</span></a>
