--- a/src/work/index.njk
+++ b/src/work/index.njk
@@ -18,7 +18,7 @@ layout: 'base.njk'
             <div class="content">
                 <div class="card-title"><h4>{{ project.data.title }}</h4></div>
                 <div class="card-date">{{ project.data.date | projectDate}}</div>
-                <div class="card-breadcrumbs"><p>{{ project.data.description }}</p></div>
+                <div class="card-breadcrumbs"><p>{{ project.data.summary }}</p></div>
                 <a href="{{ project.url }}" class="card-cta btn-primary">Learn More</a>
             </div>
         </div>
